--- a/Emby.AutoOrganize/Emby.AutoOrganize.csproj
+++ b/Emby.AutoOrganize/Emby.AutoOrganize.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard1.3;</TargetFrameworks>
-    <AssemblyVersion>1.1.4.0</AssemblyVersion>
-    <FileVersion>1.1.4.0</FileVersion>
+    <AssemblyVersion>1.1.5.0</AssemblyVersion>
+    <FileVersion>1.1.5.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -30,7 +30,7 @@
 
   <ItemGroup>
     <PackageReference Include="MediaBrowser.Naming" Version="1.0.8-beta" />
-    <PackageReference Include="mediabrowser.server.core" Version="3.3.8-beta" />
+    <PackageReference Include="mediabrowser.server.core" Version="3.3.20" />
     <PackageReference Include="SQLitePCL.pretty.core" Version="1.1.8" />
   </ItemGroup>
 
