--- a/Emby.AutoOrganize/Emby.AutoOrganize.csproj
+++ b/Emby.AutoOrganize/Emby.AutoOrganize.csproj
@@ -2,13 +2,15 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard1.3;</TargetFrameworks>
-    <AssemblyVersion>1.1.8.0</AssemblyVersion>
-    <FileVersion>1.1.8.0</FileVersion>
+    <AssemblyVersion>1.1.9.0</AssemblyVersion>
+    <FileVersion>1.1.9.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <None Remove="Configuration\autoorganizelog.html" />
     <None Remove="Configuration\autoorganizelog.js" />
+    <None Remove="Configuration\autoorganizemovie.html" />
+    <None Remove="Configuration\autoorganizemovie.js" />
     <None Remove="Configuration\autoorganizesmart.html" />
     <None Remove="Configuration\autoorganizesmart.js" />
     <None Remove="Configuration\autoorganizetv.html" />
@@ -22,6 +24,8 @@
     <EmbeddedResource Include="Configuration\autoorganizelog.js" />
     <EmbeddedResource Include="Configuration\autoorganizesmart.html" />
     <EmbeddedResource Include="Configuration\autoorganizesmart.js" />
+    <EmbeddedResource Include="Configuration\autoorganizemovie.html" />
+    <EmbeddedResource Include="Configuration\autoorganizemovie.js" />
     <EmbeddedResource Include="Configuration\autoorganizetv.html" />
     <EmbeddedResource Include="Configuration\autoorganizetv.js" />
     <EmbeddedResource Include="Configuration\fileorganizer.js" />
@@ -29,8 +33,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="MediaBrowser.Naming" Version="1.0.8-beta" />
-    <PackageReference Include="mediabrowser.server.core" Version="3.3.20" />
+    <PackageReference Include="MediaBrowser.Naming" Version="1.1.1" />
+    <PackageReference Include="mediabrowser.server.core" Version="3.3.29" />
     <PackageReference Include="SQLitePCL.pretty.core" Version="1.1.8" />
   </ItemGroup>
 
