--- a/Emby.AutoOrganize/Emby.AutoOrganize.csproj
+++ b/Emby.AutoOrganize/Emby.AutoOrganize.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard1.3;</TargetFrameworks>
-    <AssemblyVersion>1.2.3.0</AssemblyVersion>
-    <FileVersion>1.2.3.0</FileVersion>
+    <AssemblyVersion>1.2.5.0</AssemblyVersion>
+    <FileVersion>1.2.5.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -34,7 +34,7 @@
 
   <ItemGroup>
     <PackageReference Include="MediaBrowser.Naming" Version="1.1.4" />
-    <PackageReference Include="mediabrowser.server.core" Version="3.3.29" />
+    <PackageReference Include="mediabrowser.server.core" Version="3.3.40-beta" />
     <PackageReference Include="SQLitePCL.pretty.core" Version="1.1.8" />
   </ItemGroup>
 
