--- a/Emby.AutoOrganize/Emby.AutoOrganize.csproj
+++ b/Emby.AutoOrganize/Emby.AutoOrganize.csproj
@@ -1,9 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard1.3;</TargetFrameworks>
-    <AssemblyVersion>1.2.5.0</AssemblyVersion>
-    <FileVersion>1.2.5.0</FileVersion>
+    <TargetFrameworks>netstandard2.0;</TargetFrameworks>
+    <AssemblyVersion>1.2.6.0</AssemblyVersion>
+    <FileVersion>1.2.6.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -33,8 +33,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="MediaBrowser.Naming" Version="1.1.4" />
-    <PackageReference Include="mediabrowser.server.core" Version="3.3.40-beta" />
+    <PackageReference Include="MediaBrowser.Naming" Version="1.1.5-beta" />
+    <PackageReference Include="mediabrowser.server.core" Version="3.3.42-beta" />
     <PackageReference Include="SQLitePCL.pretty.core" Version="1.1.8" />
   </ItemGroup>
 
