--- a/Emby.AutoOrganize/Emby.AutoOrganize.csproj
+++ b/Emby.AutoOrganize/Emby.AutoOrganize.csproj
@@ -35,8 +35,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="MediaBrowser.Naming" Version="1.1.7-beta" />
-    <PackageReference Include="mediabrowser.server.core" Version="3.6.0.43-beta" />
+    <PackageReference Include="Jellyfin.Controller" Version="10.1.0" />
+    <PackageReference Include="Jellyfin.Naming" Version="10.1.0" />
     <PackageReference Include="SQLitePCL.pretty.core" Version="1.1.8" />
     <PackageReference Include="System.Memory" Version="4.5.1" />
   </ItemGroup>
