--- a/Emby.AutoOrganize/Emby.AutoOrganize.csproj
+++ b/Emby.AutoOrganize/Emby.AutoOrganize.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;</TargetFrameworks>
@@ -35,8 +35,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Jellyfin.Controller" Version="10.1.0" />
-    <PackageReference Include="Jellyfin.Naming" Version="10.1.0" />
+    <PackageReference Include="Jellyfin.Controller" Version="10.2.0" />
+    <PackageReference Include="Jellyfin.Naming" Version="10.2.0" />
     <PackageReference Include="SQLitePCL.pretty.core" Version="1.1.8" />
     <PackageReference Include="System.Memory" Version="4.5.1" />
   </ItemGroup>
