--- a/Emby.AutoOrganize/Emby.AutoOrganize.csproj
+++ b/Emby.AutoOrganize/Emby.AutoOrganize.csproj
@@ -37,7 +37,7 @@
   <ItemGroup>
     <PackageReference Include="Jellyfin.Controller" Version="10.2.0.1" />
     <PackageReference Include="Jellyfin.Naming" Version="10.2.0.1" />
-    <PackageReference Include="SQLitePCL.pretty.core" Version="1.1.8" />
+    <PackageReference Include="SQLitePCL.pretty.netstandard" Version="1.0.0" />
     <PackageReference Include="System.Memory" Version="4.5.1" />
   </ItemGroup>
 
