--- a/build.yaml
+++ b/build.yaml
@@ -1,7 +1,9 @@
 ---
 name: "jellyfin-plugin-autoorganize"
 guid: "70b7b43b-471b-4159-b4be-56750c795499"
-version: "1.0.0"
+version: "2" # Please increment with each pull request
+jellyfin_version: "10.3.0" # The earliest binary-compatible version
+owner: "jellyfin"
 nicename: "Auto Organize"
 description: "Automatically organize your media"
 overview: "Automatically organize your media"
