--- a/build.yaml
+++ b/build.yaml
@@ -1,8 +1,9 @@
 ---
 name: "Auto Organize"
 guid: "70b7b43b-471b-4159-b4be-56750c795499"
-version: "8.0.0.0"
-targetAbi: "10.6.0.0"
+version: "9.0.0.0"
+targetAbi: "10.7.0.0"
+framework: "net5.0"
 owner: "jellyfin"
 overview: "Automatically organize your media"
 description: "Automatically organize your media"
