--- a/build.yaml
+++ b/build.yaml
@@ -1,6 +1,7 @@
 ---
 name: "Auto Organize"
 guid: "70b7b43b-471b-4159-b4be-56750c795499"
+imageUrl: "https://repo.jellyfin.org/releases/plugin/images/jellyfin-plugin-autoorganize.png"
 version: "9.0.0.0"
 targetAbi: "10.7.0.0"
 framework: "net5.0"
@@ -9,6 +10,6 @@ overview: "Automatically organize your media"
 description: "Automatically organize your media"
 category: "General"
 artifacts:
-- "Emby.AutoOrganize.dll"
-changelog: >
+  - "Emby.AutoOrganize.dll"
+changelog: |
   changelog
